tests/ui/fail/fn-mismatch-async-02.stderr
error: encountered mismatch in asyncness for #[union_fn] method
 --> tests/ui/fail/fn-mismatch-async-02.rs:6:5
  |
6 |     fn bar() {}
  |     ^^

error: mismatch with this method
 --> tests/ui/fail/fn-mismatch-async-02.rs:5:5
  |
5 |     async fn foo() {}
  |     ^^^^^
